improve unit tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.72"
 bson = {version = "2.6.1", features = ["serde_with"]}
 clap = { version = "4.3.19", features = ["derive"] }
 serde = { version = "1.0.183", features = ["derive"] }
+tempfile = "3.7.1"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
