add sled as db engine

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ bson = {version = "2.6.1", features = ["serde_with"]}
 clap = { version = "4.3.19", features = ["derive"] }
 log = "0.4.20"
 serde = { version = "1.0.183", features = ["derive"] }
+sled = "0.34.7"
 tempfile = "3.7.1"
 
 [dev-dependencies]
