--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 anyhow = "1.0.72"
 bson = {version = "2.6.1", features = ["serde_with"]}
 clap = { version = "4.3.19", features = ["derive"] }
+crossbeam = "0.8.2"
 log = "0.4.20"
 rand = "0.8.5"
+rayon = "1.7.0"
 serde = { version = "1.0.183", features = ["derive"] }
 sled = "0.34.7"
 tempfile = "3.7.1"
@@ -16,6 +18,7 @@ tempfile = "3.7.1"
 [dev-dependencies]
 assert_cmd = "2.0.12"
 criterion = "0.5.1"
+panic-control = "0.1.4"
 predicates = "3.0.3"
 
 [[bench]]
