--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.72"
 bson = {version = "2.6.1", features = ["serde_with"]}
+bytes = "1.4.0"
 clap = { version = "4.3.19", features = ["derive"] }
 crossbeam = "0.8.2"
 log = "0.4.20"
@@ -14,6 +15,7 @@ rayon = "1.7.0"
 serde = { version = "1.0.183", features = ["derive"] }
 sled = "0.34.7"
 tempfile = "3.7.1"
+tokio = {version = "1.32.0", features = ["full"]}
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
